--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recepten</title>
+</head>
+<body>
+    <h1> Boerenworst met tomaten</h1>
+
+    <ul>
+        <li><a href="index.html">Boerenworst met tomaten</a></li>
+        <li><a href="pasta-pesto.html">pasta pesto</a></li>
+        <li><a href="wentelteefjes.html">wentelteefjes</a></li>
+    </ul>
+
+    <img src="Images/boerenworst-met-tomaten.jpeg">
+
+    <h2> Ingredienten</h2>
+
+    <ul class="ingredienten">
+        <li>1 ajuin </li>
+        <li>4 aardappelen </li>
+        <li>4 tomaten </li>
+        <li>4 worsten </li>
+        <li>zout en peper</li>
+    </ul>
+
+    <h2> Bereiding</h2>
+
+    <ol>
+        <li> Snijd alle groeten en aandappelen en doe die in een kom.</li>
+        <li> Snijd de worst en bak die even in de pan.</li>
+        <li> Steek de groeten en de aardappelen in de oven en bak die op 180°.</li>
+        <li> Voeg op het einde de worst erbij.</li>
+    </ol>
+    
+</body>
+</html>
