--- a/pasta-pesto.html
+++ b/pasta-pesto.html
@@ -16,7 +16,7 @@
         <li><a href="wentelteefjes.html">wentelteefjes</a></li>
     </ul>
 
-    <img src="Images/boerenworst-met-tomaten.jpeg">
+    <img src="Images/pasta-pesto.jpeg">
 
     <h2> Ingredienten</h2>
 
@@ -35,7 +35,6 @@
         <li> Snijd de worst en bak die even in de pan.</li>
         <li> Steek de groeten en de aardappelen in de oven en bak die op 180°.</li>
         <li> Voeg op het einde de worst erbij.</li>
-        <li> Dan is het klaar.</li>
     </ol>
     
 </body>
