--- a/wentelteefjes.html
+++ b/wentelteefjes.html
@@ -16,26 +16,23 @@
         <li><a href="wentelteefjes.html">wentelteefjes</a></li>
     </ul>
 
-    <img src="Images/boerenworst-met-tomaten.jpeg">
+    <img src="images/wentelteefjes.jpeg">
 
     <h2> Ingredienten</h2>
 
     <ul class="ingredienten">
-        <li>1 ajuin </li>
-        <li>4 aardappelen </li>
-        <li>4 tomaten </li>
-        <li>4 worsten </li>
+        <li>2 eieren </li>
+        <li>5 aardbeien </li>
+        <li>10 blauwbessen</li>
         <li>zout en peper</li>
     </ul>
 
     <h2> Bereiding</h2>
 
     <ol>
-        <li> Snijd alle groeten en aandappelen en doe die in een kom.</li>
-        <li> Snijd de worst en bak die even in de pan.</li>
-        <li> Steek de groeten en de aardappelen in de oven en bak die op 180°.</li>
-        <li> Voeg op het einde de worst erbij.</li>
-        <li> Dan is het klaar.</li>
+        <li> Klop de eieren, leg de boterhammen in het ei.</li>
+        <li> Bak de boterhammen in een pan.</li>
+        <li> Als ze gebakken zijn strooi wat aardbeien en blaubessen erover heen.</li>
     </ol>
     
 </body>
